<resources>

    <string name="app_name">Julian Day Calculator</string>
    <string name="title_activity_main">Julian Day Calculator</string>
    <string name="date">Date:</string>
    <string name="today_date">Today</string>
    <string name="calculate">Calculate</string>
    <string name="reverse">Reverse calculation</string>
    <string name="jdn">Julian Day (JDN):</string>
    <string name="jdn_calc">Julian Day (JDN) Calculator</string>
    <string name="date_interval">Date Interval Calculator</string>
    <string name="invalid_date">Invalid date!</string>
    <string name="invalid_from_date">Invalid From Date!</string>
    <string name="invalid_to_date">Invalid to Date!</string>
    <string name="invalid_jdn">Invalid Julian Day Number!</string>
    <string name="calendar">Pick</string>
    <string name="error_dlg_title">Error</string>
    <string name="days">days</string>
    <string name="title_activity_date_interval">Date Interval Calculator</string>
    <string name="from_date">From Date:</string>
    <string name="to_date">To Date:</string>
    <string name="bc_label">BC era</string>
    <string name="jc_label">Date in Julian Calendar</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_week_day">Weekday Calculator</string>
    <string name="weekday">Weekday:</string>
    <string name="weekday_menu">Weekday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="title_activity_gregorian2_julian">Gregorian to Julian</string>
    <string name="gregorian_date">Gregorian Date</string>
    <string name="julian_date">Julian Date</string>
    <string name="g2j_menu">Grigorian to Julian</string>
    <string name="invalid_gregorian_date">Invalid Gregorian date!</string>
    <string name="invalid_julian_date">Invalid Julian date!</string>
    <string name="slash">/</string>
    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
</resources>