<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" 
        android:layout_centerVertical="true" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    
    <RelativeLayout android:id="@+id/yearLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content">
              
        <EditText
            android:id="@+id/yearTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext">
    
            <requestFocus />
        </EditText>
        
        <TextView
            android:id="@+id/txtYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/yearTxt"
            android:text="@string/year"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>
    
    <TextView
        android:id="@+id/txtSlash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/yearLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/monthLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/txtSlash1" >
    
        <EditText
            android:id="@+id/monthTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext"/>

        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/monthTxt"
            android:text="@string/month"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>

    <TextView
        android:id="@+id/txtSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/monthLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/dayLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/txtSlash2" >

        <EditText
            android:id="@+id/dayTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext"/>
    
        <TextView
            android:id="@+id/txtDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/dayTxt"
            android:text="@string/day"
            android:layout_centerHorizontal="true" />
        
        </RelativeLayout>
    
    <ImageButton
        android:id="@+id/button3"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/dayLayout"
        android:onClick="showDatePicker"
        android:contentDescription="@string/calendar"
        android:src="@drawable/calendar" />
</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/bcChkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/bc_label"
        android:onClick="calculateJDN" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/jcChkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/jc_label" 
        android:onClick="calculateJDN" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:onClick="setToday"
        android:text="@string/today_date" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button1"
        android:layout_alignBottom="@+id/button1"
        android:layout_toRightOf="@+id/button1"
        android:onClick="calculateJDN"
        android:text="@string/calculate" />
</RelativeLayout>

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/weekday"
        android:layout_centerVertical="true"
         />


    <EditText
        android:id="@+id/outText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/txtView"
        android:focusable="false"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1" />
    
</RelativeLayout>    
</LinearLayout>
