<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent" 
              android:layout_height="fill_parent" 
              android:orientation="vertical" >

<RelativeLayout android:layout_width="wrap_content"
      android:layout_height="wrap_content">
      
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/from_date" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    
    <RelativeLayout android:id="@+id/fromYearLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content">
              
        <EditText android:id="@+id/fromYearTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext">
    
            <requestFocus />
        </EditText>
        
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fromYearTxt"
            android:text="@string/year"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>
    
    <TextView  android:id="@+id/fromSlash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fromYearLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/fromMonthLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/fromSlash1" >
    
        <EditText android:id="@+id/fromMonthTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext" />

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fromMonthTxt"
            android:text="@string/month"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>

    <TextView android:id="@+id/fromSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fromMonthLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/fromDayLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/fromSlash2" >

        <EditText android:id="@+id/fromDayTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext" />
    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/fromDayTxt"
            android:text="@string/day"
            android:layout_centerHorizontal="true" />
        
        </RelativeLayout>
    
    <ImageButton android:id="@+id/pickButton1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/fromDayLayout"
        android:onClick="showFromDatePicker"
        android:contentDescription="@string/calendar"
        android:src="@drawable/calendar" />
</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/bcFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/bc_label" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/jcFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/jc_label" />

</RelativeLayout>   

<RelativeLayout android:layout_width="wrap_content"
      android:layout_height="wrap_content">
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:text="@string/to_date" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    
    <RelativeLayout android:id="@+id/toYearLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content">
              
        <EditText android:id="@+id/toYearTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="4"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext" />
    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toYearTxt"
            android:text="@string/year"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>
    
    <TextView  android:id="@+id/toSlash1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toYearLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/toMonthLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/toSlash1" >
    
        <EditText android:id="@+id/toMonthTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1" 
            android:imeOptions="actionNext" />

        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toMonthTxt"
            android:text="@string/month"
            android:layout_centerHorizontal="true" />
    
    </RelativeLayout>

    <TextView android:id="@+id/toSlash2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toMonthLayout"
        android:text="@string/slash" 
        android:layout_centerVertical="true" />
    
    <RelativeLayout android:id="@+id/toDayLayout" 
              android:layout_width="wrap_content" 
              android:layout_height="wrap_content"
              android:layout_toRightOf="@+id/toSlash2" >

        <EditText android:id="@+id/toDayTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="2"
            android:inputType="number" 
            android:lines="1"
            android:maxLines="1"
            android:imeOptions="actionNext" />
    
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toDayTxt"
            android:text="@string/day"
            android:layout_centerHorizontal="true" />
        
        </RelativeLayout>
    
    <ImageButton android:id="@+id/pickButto2"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/toDayLayout"
        android:onClick="showToDatePicker"
        android:contentDescription="@string/calendar"
        android:src="@drawable/calendar" />
</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/bcTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/bc_label" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <CheckBox
        android:id="@+id/jcTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/jc_label" />

</RelativeLayout>   

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">
    
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="subtract"
        android:text="@string/calculate" />

</RelativeLayout>

<RelativeLayout android:layout_width="fill_parent"
      android:layout_height="wrap_content">

    <EditText
        android:id="@+id/outText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:ems="10"
        android:inputType="number"
        android:maxLines="1" />

    <TextView
        android:id="@+id/txtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/outText"
        android:text="@string/days"
        android:layout_centerVertical="true"
         />

</RelativeLayout>
  
</LinearLayout>